feat: add user registration, change Postgres connection to use Pools, create DTO's to handle auth data
