# docs/swagger.json
@@ -15,9 +15,47 @@
         },
         "version": "1.0"
     },
-    "host": "book-reservation.swagger.io",
-    "basePath": "/v2",
+    "host": "127.0.0.1:8080",
     "paths": {
+        "/auth/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Register a new User",
+                "parameters": [
+                    {
+                        "description": "User details",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.RegisterRequestDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/auth.RegisterResponseDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "consumes": [
@@ -37,7 +75,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.CreateRequestDTO"
+                            "$ref": "#/definitions/user.CreateUserRequestDTO"
                         }
                     }
                 ],
@@ -45,7 +83,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.CreateResponseDTO"
+                            "$ref": "#/definitions/user.CreateUserResponseDTO"
                         }
                     },
                     "500": {
@@ -59,7 +97,77 @@
         }
     },
     "definitions": {
-        "user.CreateRequestDTO": {
+        "auth.JwtToken": {
+            "type": "object",
+            "properties": {
+                "raw": {
+                    "type": "string"
+                },
+                "signed": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.RegisterRequestDTO": {
+            "type": "object",
+            "properties": {
+                "birth_date": {
+                    "type": "string",
+                    "example": "2024-08-15"
+                },
+                "cpf": {
+                    "type": "string",
+                    "example": "32212276723"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password123"
+                }
+            }
+        },
+        "auth.RegisterResponseDTO": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "$ref": "#/definitions/auth.JwtToken"
+                },
+                "user": {
+                    "$ref": "#/definitions/auth.RegisterUser"
+                }
+            }
+        },
+        "auth.RegisterUser": {
+            "type": "object",
+            "properties": {
+                "birth_date": {
+                    "type": "string"
+                },
+                "cpf": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.CreateUserRequestDTO": {
             "type": "object",
             "properties": {
                 "birth_date": {
@@ -80,7 +188,7 @@
                 }
             }
         },
-        "user.CreateResponseDTO": {
+        "user.CreateUserResponseDTO": {
             "type": "object",
             "properties": {
                 "birth_date": {
